--- a/Src/Problem1/Problem1.csproj
+++ b/Src/Problem1/Problem1.csproj
@@ -47,16 +47,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Binaries\debug\CodeReason.Reports.dll</HintPath>
     </Reference>
-    <Reference Include="CodeReason.Reports.Charts.Visifire, Version=0.5.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="IronPython, Version=2.7.0.40, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\IronPython 2.7\Platforms\Net35\IronPython.dll</HintPath>
     </Reference>
     <Reference Include="IronPython.Modules, Version=2.7.0.40, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\IronPython 2.7\Platforms\Net35\IronPython.Modules.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Dynamic, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\IronPython 2.7\Platforms\Net35\Microsoft.Dynamic.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.Dynamic, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Scripting, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\IronPython 2.7\Platforms\Net35\Microsoft.Scripting.dll</HintPath>
     </Reference>
@@ -87,6 +84,7 @@
     </Compile>
     <Compile Include="ScriptReaderEngine\BuiltInFunctions.cs" />
     <Compile Include="ScriptReaderEngine\DynamicLibraryInvoker.cs" />
+    <Compile Include="ScriptReaderEngine\RubyScriptReader.cs" />
     <Compile Include="TableRows\ReportTableRowClass.cs" />
     <Compile Include="TableRows\ReportTableRowList.cs" />
     <Compile Include="Method2.xaml.cs">
@@ -124,6 +122,9 @@
     <Resource Include="Images\news-blue.ico" />
     <Resource Include="Images\about-us-red.ico" />
     <Resource Include="about-us-red.ico" />
+    <Content Include="Scripts\Script.rb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\Script.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
