--- a/Src/Problem1/Problem1.csproj
+++ b/Src/Problem1/Problem1.csproj
@@ -128,6 +128,9 @@
     <Content Include="Scripts\Script.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Templates\aut.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Templates\ReportTemplate-Method1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
