--- a/Src/Problem2/Problem2.csproj
+++ b/Src/Problem2/Problem2.csproj
@@ -77,6 +77,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ListExtension.cs" />
     <Compile Include="ScriptEditor\ScriptEditorWindow.xaml.cs">
       <DependentUpon>ScriptEditorWindow.xaml</DependentUpon>
     </Compile>
@@ -85,8 +86,15 @@
     <Compile Include="ScriptReaderEngine\IScriptReader.cs" />
     <Compile Include="ScriptReaderEngine\PythonScriptReader.cs" />
     <Compile Include="ScriptReaderEngine\RubyScriptReader.cs" />
-    <Compile Include="Solvers\Solver1.cs" />
-    <Compile Include="Solvers\Solver2.cs" />
+    <Compile Include="Solvers\Entities\Able.cs" />
+    <Compile Include="Solvers\Entities\Baker.cs" />
+    <Compile Include="Solvers\Entities\Charlie.cs" />
+    <Compile Include="Solvers\Entities\Customer.cs" />
+    <Compile Include="Solvers\Entities\EventType.cs" />
+    <Compile Include="Solvers\Entities\FutureEventList.cs" />
+    <Compile Include="Solvers\Entities\ICarhops.cs" />
+    <Compile Include="Solvers\Entities\ICustomer.cs" />
+    <Compile Include="Solvers\Entities\State.cs" />
     <Compile Include="Solvers\SolverEngine.cs" />
     <Compile Include="TableRows\ReportTableRowClass.cs" />
     <Compile Include="TableRows\ReportTableRowList.cs" />
@@ -169,6 +177,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
