--- a/Src/Problem2/Problem2.csproj
+++ b/Src/Problem2/Problem2.csproj
@@ -56,8 +56,10 @@
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\IronPython 2.7\Platforms\Net35\Microsoft.Scripting.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Scripting.Core, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL" />
+    <Reference Include="ReachFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -77,7 +79,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GraphicalOutput\Timeline.xaml.cs">
+      <DependentUpon>Timeline.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ListExtension.cs" />
+    <Compile Include="Method1Report.xaml.cs">
+      <DependentUpon>Method1Report.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Method2Report.xaml.cs">
+      <DependentUpon>Method2Report.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NameGenerator\GenerateName.cs" />
     <Compile Include="ScriptEditor\ScriptEditorWindow.xaml.cs">
       <DependentUpon>ScriptEditorWindow.xaml</DependentUpon>
     </Compile>
@@ -86,6 +98,7 @@
     <Compile Include="ScriptReaderEngine\IScriptReader.cs" />
     <Compile Include="ScriptReaderEngine\PythonScriptReader.cs" />
     <Compile Include="ScriptReaderEngine\RubyScriptReader.cs" />
+    <Compile Include="ScriptReaderEngine\SimpleRNG.cs" />
     <Compile Include="Solvers\Entities\Able.cs" />
     <Compile Include="Solvers\Entities\Baker.cs" />
     <Compile Include="Solvers\Entities\Charlie.cs" />
@@ -96,11 +109,13 @@
     <Compile Include="Solvers\Entities\ICustomer.cs" />
     <Compile Include="Solvers\Entities\State.cs" />
     <Compile Include="Solvers\SolverEngine.cs" />
-    <Compile Include="TableRows\ReportTableRowClass.cs" />
-    <Compile Include="TableRows\ReportTableRowList.cs" />
     <Page Include="Dialog\NumberDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="GraphicalOutput\Timeline.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -117,10 +132,21 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Method1Report.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Method2Report.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ScriptEditor\ScriptEditorWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Resource Include="App_Readme\MathNet.Numerics.readme.txt" />
+    <Resource Include="App_Readme\MathNet.Numerics.copyright.txt" />
+    <Resource Include="App_Readme\MathNet.Numerics.authors.txt" />
     <Content Include="Templates\ReportTemplate-Method1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -158,6 +184,10 @@
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Names\nameDataBase.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
