--- a/Src/Problem2/Problem2.csproj
+++ b/Src/Problem2/Problem2.csproj
@@ -39,7 +39,7 @@
     <StartupObject>Problem2.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Images\about-us-red.ico</ApplicationIcon>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CodeReason.Reports, Version=0.5.0.0, Culture=neutral, PublicKeyToken=74fc60a060db7911, processorArchitecture=MSIL" />
@@ -159,9 +159,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Resource Include="App_Readme\MathNet.Numerics.readme.txt" />
-    <Resource Include="App_Readme\MathNet.Numerics.copyright.txt" />
-    <Resource Include="App_Readme\MathNet.Numerics.authors.txt" />
+    <Resource Include="icon.ico" />
     <Content Include="Templates\ReportTemplate-Method1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -202,7 +200,7 @@
     <Content Include="Names\nameDataBase.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="packages.config" />
+    <None Include="ClassDiagrams.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
